codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__after_agent_app_server_hook_notifications_non_runtime_render_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
AfterAgent hook (completed)
  status: legacy after_agent runtime status
  hook context: NERO HOOK SYSTEM [state: healthy]
