codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__after_agent_app_server_hook_notifications_render_meta_only_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
AfterAgent hook (completed)
  hook-auto instruction: legacy after_agent runtime status
  hook-auto protocol: ok (expected=true, delivered=true)
  hook-auto follow-up: queued (queued=1, blocked=0)
