codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__after_agent_app_server_hook_notifications_render_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 13759
expression: combined
---
AfterAgent hook (completed)
  runtime status: NERO HOOK SYSTEM [state: healthy]
