codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__after_compaction_app_server_hook_notifications_render_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
AfterCompaction hook (completed)
  runtime status: Keep the campaign checkpoint visible after compaction.
