codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__after_compaction_hook_events_render_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
• Running AfterCompaction hook: refreshing runtime grounding

AfterCompaction hook (completed)
  status: refreshing runtime grounding
  warning: Heads up from the hook
  hook context: Remember the startup checklist.
