codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_collab_wait_items_render_history.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
• Listening for first completion from 2 agents
  └ Robie [explorer]
    Ada [reviewer]


• First completion observed; 1 target still pending
  └ Robie [explorer]: Completed - Done
    Ada [reviewer]: Running
