codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_app_server_multi_file_reader_item_completed_renders_history_cell.snap
---
source: tui/src/chatwidget/tests.rs
expression: normalize_snapshot_paths(blob)
---
• Read with multi_file_reader
  └ Requests: 2 total | 2 success | 0 error | 19 lines
    AGENTS.md:1-10 [10 lines]
    README.md (full) [9 lines]
