codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__pre_tool_use_hook_events_render_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
• Running PreToolUse hook: warming the shell

PreToolUse hook (completed)
  status: warming the shell
  warning: Heads up from the hook
  hook context: Remember the startup checklist.
